Almost finished form

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ h2 {
 h3 {
     font-weight: normal;
     font-size: 1.4rem;
+    margin-bottom: 10px;
 }
 
 .wrapper {
@@ -53,7 +54,7 @@ h3 {
 .paragraphs {
     display: flex;
     flex-direction: column;
-    margin-bottom: 40px;
+    margin: 30px 0;
     padding: 40px;
 }
 
@@ -68,4 +69,48 @@ p {
     flex-direction: column;
     background-color: #171717;
     padding: 20px 40px;
+}
+
+form {
+    display: flex;
+    gap: 50px;
+}
+
+.left,
+.right {
+    display: flex;
+    flex-direction: column;
+    
+    gap: 8px;
+}
+
+.left > div, 
+.right > div {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    padding: 5px 0 ;
+}
+
+input {
+    background-color: #121212;
+    border: 1px solid black;
+    height: 1.7rem;
+    width: 15rem;
+    color:rgb(154, 154, 154);
+    border-radius: 3px;
+    font-size: 1rem;
+    padding: 3px;
+}
+
+input:invalid {
+    box-shadow: 0 3px #592A30;
+    border: 1px solid #592A30;
+}
+
+input:valid {
+    box-shadow: 0 3px #415449;
+    border: 1px solid #415449;
 }
